# synthetic_data

./: .gitignore  README.md  accelerate.yaml  log_return_statistic.py  pyproject.toml
boosted/: CMakeLists.txt  config.cmake  setup.sh
boosted/src/: CMakeLists.txt  boosted_stats.cpp
boosted/src/lag_prod_mean/: CMakeLists.txt  lag_prod_mean.cpp  lag_prod_mean.h
notebooks/: coarse_fine_volatility.ipynb  filtered_data.ipynb  fingan_stf_thesis.ipynb  fourier_flow_stf_thesis.ipynb  gain_loss_asymmetry.ipynb  garch_copula.ipynb  garch_experiments.ipynb  garch_stf_thesis.ipynb  heavy_tails.ipynb  leverage_effect.ipynb  linear_unpredictability.ipynb  quant_stf_thesis.ipynb  quant_stf_thesis_plt.ipynb  real_nvp_thesis.ipynb  sin_fouier_flow.ipynb  stylized_facts.ipynb  stylized_facts_experiments.ipynb  toy_experiment.ipynb  volatility_clustering.ipynb
scripts/: compare_data.py  data.py  eval_conditional_flow.py  eval_fourier_flows.py  generate_garch.py  get_runs.sh  init_sweep.sh  inspect_data.py  inspect_statistic.py  measure_speed.py  plot_model_stf.py  plot_msft_stf.py  plot_noise_stf.py  plot_real_stf.py  plot_stf_figures.py  plot_stf_var_tables.py  start_agent.sh  train_cond_flow.py  train_conditional_flow.py  train_ff.py  train_fingan.py  train_fourier_flow.py  train_fourier_flows.py  train_garch.py  train_regime_cond_flow.py  train_time_gan.py
scripts/hpc_run_scripts/: _cfingan.sh  c_flow.sh  eval_fourier_flow_generator.sh  fingan.sh  fourier_flow.sh  garch.sh  real_nvp.sh  run_fourier_flow_generator.sh  train_cond_flow.sh  train_fingan.sh  train_fourier_flow.sh  train_fourier_flow_generator.sh  train_fourier_flow_lstm.sh  train_garch.sh  train_real_flow.sh  train_time_gan.sh
src/: abs_log_return_statistic.py  auto_corr_statistic.py  base_filter.py  base_generator.py  base_outlier_set.py  base_statistic.py  cached_outlier_set.py  coarse_fine_volatility.py  data_inspector.py  gain_loss_asymetry.py  garch_generator.py  historic_events.py  index_generator.py  leverage_effect.py  log_return_statistic.py  normalized_price_return.py  outlier_detector.py  outlier_summary.py  plotter.py  quantile_statistic.py  real_data_loader.py  return_statistic.py  scaled_log_return_statistic.py  sp500_statistic.py  spike_statistic.py  statistic_inspector.py  stock_price_statistic.py  stylized_fact.py  temporal_statistc.py  wavelet_statistic.py
src/c_flows/: c_flow.py  c_layer.py  train_c_flow.py
src/cfingan/: cfingan.py  train_cfingan.py
src/conditional_flow/: conditional_fft.py  conditional_flow.py  conditional_flow_generator.py  conditional_flow_index_generator.py  conditional_layer.py
src/data_source/: base_filter.py  base_generator.py  base_index_generator.py  chained_filter.py  data_inspector.py  dax_symbols.csv  garch_generator.py  gen_data_loader.py  illiquidity_filter.py  index_generator.py  infty_filter.py  len_filter.py  load_data.py  real_data_loader.py  smi_symbols.csv  sp500_symbols.csv  time_filter.py
src/fingan_takahashi/: evaluate_fingan.py  fin_gan.py  fin_gan_generator.py  fin_gan_index_generator.py  fin_gan_trainer.py  train_fingan.py
src/fitting_utils/: gen_inv_gamma.py  power_fit.py
src/fourier_flows/: ff_training.py  filter_networks.py  fourier_flow.py  fourier_flow_generator.py  fourier_flow_index_generator.py  fourier_transform_layer.py  spectral_filtering_layer.py  train_fourier_flow.py  train_fourier_flow_lbfgs.py
src/garch/: copula_garch_model.py  garch.py  garch_copula_generator.py  garch_copula_index_generator.py  garch_generator.py  garch_index_generator.py  garch_univar_generator.py  grid_search_garch.py  train_garch.py  univar_garch_model.py
src/outlier/: base_outlier_set.py  cached_outlier_set.py  historic_events.py  isolation_forest_set.py  outlier_summary.py  tick.py
src/real_nvps/: coupling_layer.py  real_nvp.py  train_real_nvp.py
src/regime_cond_flow/: regime_cond_flow.py  regime_cond_flow_generator.py  regime_cond_flow_index_generator.py
src/scores/: discriminative_score.py  predictive_score.py  wasserstein_distance.py
src/statistics/: abs_log_return_statistic.py  base_statistic.py  distribution_comparator.py  log_return_statistic.py  quantile_statistic.py  return_statistic.py  scaled_log_return_statistic.py  sp500_statistic.py  spike_statistic.py  stock_price_statistic.py  tail_statistics.py  temporal_statistc.py  wavelet_statistic.py
src/stylized_facts/: auto_corr_statistic.py  bootstrap.py  bootstrap_stylized_facts.py  coarse_fine_volatility.py  gain_loss_asymetry.py  heavy_tails.py  lagged_correlation.py  leverage_effect.py  linear_unpredictability.py  normalized_price_return.py  static_stats.py  stylized_fact.py  stylized_loss.py  stylized_score.py  stylized_score_depri.py  volatility_clustering.py
src/time_gan/: tg_rnn_network.py  tg_training.py  time_gan.py  time_gan_generator.py  time_gan_index_generator.py
src/utils/: datasets.py  networks.py  type_converter.py
src/visualization/: dim_reducer.py  latex_stylized_fact_table.py  plot_table.py  stylized_facts_visualizer.py  tail_dist_visualizer.py  temporal_series_visualizer.py  visualize_scores.py  visualize_stylized_facts.py  visualize_stylized_facts_paper.py  visualize_temp_series.py  visualizer.py
src/wandb_decorator/: wandb_init_decorator.py
src/wandb_tools/: generator_factory.py  (+4 more)
sweep_configs/: cond_flow.yaml  copula_garch.yaml  fourier_flow.yaml  fourier_flow_lstm.yaml  real_flow.yaml  time_gan.yaml  univar_garch.yaml
tests/: test_auto_corr_statistic.py  test_base_statistic.py  test_boosted.py  test_boosted_stats.py  test_cache_outlier_set.py  test_coarse_fine_volatility.py  test_cond_flow_generator.py  test_cond_flows.py  test_data_cleaner.py  test_data_inspector.py  test_fingan_generator.py  test_fourier_flow_generator.py  test_fourier_flows.py  test_fourier_transform_layer.py  test_garch_generator.py  test_historic_events.py  test_illiquidity_filter.py  test_len_filter.py  test_leverage_effect.py  test_quantile_statistic.py  test_real_data_loader.py  test_scaled_log_return_statistic.py  test_tick.py  test_type_converter.py  test_univar_garch_model.py
(+18 files in other folders)
