[tool.poetry]
name = "synthetic-data"
version = "0.1.0"
description = "Synthetic data generation"
authors = ["Nico Graf <ncograf@gmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.37"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
beautifulsoup4 = "^4.12.3"
pytest = "^8.0.2"
matplotlib = "^3.8.3"
click = "^8.1.7"
py-getch = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
