[tool.poetry]
name = "synthetic-data"
version = "0.1.0"
description = "Synthetic data generation"
authors = ["Nico Graf <ncograf@gmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "src"},
    {include = "*", from = "src/statistics"},
    {include = "*", from = "src/outlier"},
    {include = "*", from = "src/stylized_facts"},
    {include = "*", from = "src/data_source"},
    {include = "*", from = "src/fourier_flows"},
    {include = "*.so", from = "boosted/boost_modules", format = "wheel"},
]

[tool.poetry.dependencies]
python = "3.10.13"
yfinance = "0.2.37"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
beautifulsoup4 = "^4.12.3"
pytest = "^8.0.2"
matplotlib = "^3.8.3"
click = "^8.1.7"
py-getch = "^1.0.1"
tueplots = "^0.0.13"
scikit-learn = "^1.4.1.post1"
matplotcheck = "^0.1.4"
arch = "^6.3.0"
schema = "^0.7.5"
pyperclip = "^1.8.2"
icecream = "^2.1.3"
statsmodels = "^0.14.1"
arrayfire = "^3.8.0"
powerlaw = "^1.5"
pyqt6 = "^6.6.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
